# TJAPlayer

./: Cargo.toml  README.md
glge/: Cargo.toml  build.rs
glge/src/: context.rs  gl.rs  lib.rs  wgl.rs
tja/: Cargo.toml
tja/src/: lib.rs
tja_player/: Cargo.toml
tja_player/src/: main.rs
